# mitblr-club-api

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  MongoDB.md  README.md  dockerfile  entrypoint.sh  pyproject.toml
mitblr_club_api/: app.py  clubs.py  events.py  server.py  students.py
mitblr_club_api/decorators/: authorized.py
mitblr_club_api/endpoints/: __init__.py  club_teams.py  clubs.py  events.py  students.py
mitblr_club_api/endpoints/auth/: callback.py  external.py  internal.py
mitblr_club_api/endpoints/clubs/: base.py  core.py  events.py
mitblr_club_api/endpoints/events/: attend.py  base.py  register.py
mitblr_club_api/models/: cache_tup.py  club_create.py  club_teams.py  clubs.py  events.py  login_data.py  student_create.py  students.py  user.py
mitblr_club_api/models/cached/: clubs.py  events.py  students.py  team.py
mitblr_club_api/models/enums/: clubs.py  core_committee.py  course.py  mess_provider.py  unit.py
mitblr_club_api/models/internal/: clubs.py  events.py  students.py  team.py  user.py
mitblr_club_api/models/request/: club.py  events.py  login.py  ms_auth.py  student.py  team.py
mitblr_club_api/utils/: __init__.py  backoff.py  check_auth.py  exceptions.py  generate_jwt.py  permissions.py  tasks.py
