[tool.poetry]
name = "mitblr-club-api"
version = "0.0.1"
description = "API to interface with the backend database containing information for operating the club ecosystem"
authors = ["Alphaspiderman <68412330+Alphaspiderman@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sanic = {extras = ["ext"], version = "^23.6.0"}
motor = "^3.3.1"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
taskipy = "^1.12.0"
bcrypt = "^4.0.1"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
pre-commit = "^3.4.0"
python-dotenv = "^1.0.0"
docformatter = "^1.7.5"

[tool.docformatter]
black = true
non-strict = false
non-cap = ["docformatter"]

[tool.taskipy.tasks]
server = { cmd = "python -m mitblr_club_api.server", help = "Runs the API Server"}
lint = { cmd = "pre-commit run", help = "Lints project" }
lintall = { cmd = "pre-commit run --all-files", help = "Lints project" }
precommit = { cmd = "pre-commit install", help = "Installs the pre-commit git hook" }
format = { cmd = "black . --line-length=110", help = "Runs the black python formatter" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
